# jinject

./: CMakeLists.txt  README  README.md  jinject.pc.in
cmake/: Coverage.cmake  Doxygen.cmake  StaticAnalysis.cmake
examples/: .dependency_injection_using_inheritance_example.cpp.swp  CMakeLists.txt  dependency_injection_using_inheritance_example.cpp  dependency_injection_using_lazy_instance_example.cpp  dependency_injection_using_single_instance_example.cpp  dependency_injection_with_custom_instantiation_example.cpp  dependency_injection_with_custom_service_locator_example.cpp  dependency_injection_with_service_locator_example.cpp  sample_test.cpp
include/jinject/: jinject.h
tests/: CMakeLists.txt  ifaces_test.cpp  sample_test.cpp  unit_test.cpp
